--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.2",
     "sass": "^1.69.7",
     "swr": "^2.0.0"
